full-moon/tests/cases/fail/parser/assignment-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/assignment-3
---
error[ast]: unexpected token `until`. until (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:1
  │
1 │ until = 3
  │ ^^^^^


